<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tronku.quizapp.exit">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@color/blue"
        android:background="@drawable/quit">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playedwell"
                android:textSize="45sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:fontFamily="@font/caviar"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:text="@string/replay"
                android:id="@+id/replay"
                android:fontFamily="@font/josefin"
                android:alpha="0.8"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:background="@color/replay"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:text="@string/quit"
                android:alpha="0.8"
                android:id="@+id/exit"
                android:fontFamily="@font/josefin"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:background="@color/exit"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="bottom"
                android:layout_marginTop="50dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
