<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tronku.quizapp.login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideInset"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@color/blue"
        android:background="@drawable/login">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/quizlogo"
                android:background="@android:color/white"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:hint="@string/name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:fontFamily="@font/caviar"
                android:textSize="23sp"
                android:id="@+id/name"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_style"
                android:inputType="textPersonName"
                android:padding="10dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:hint="@string/mail"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:fontFamily="@font/caviar"
                android:textSize="23sp"
                android:id="@+id/mail_id"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_style"
                android:inputType="textEmailAddress"
                android:padding="10dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:hint="@string/avatar"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:fontFamily="@font/caviar"
                android:textSize="23sp"
                android:id="@+id/avatar"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_style"
                android:inputType="textPersonName"
                android:padding="10dp"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/enter"
                android:textSize="20sp"
                android:fontFamily="@font/josefin"
                android:id="@+id/enter"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/developer"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="bottom"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>