<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tronku.quizapp.ques5">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideInset"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@color/blue"
        android:background="@drawable/innovation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:fontFamily="@font/josefin"
                android:textSize="45sp"
                android:paddingTop="20dp"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:layout_gravity="center_vertical"/>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/q5_op1"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:background="@drawable/options1"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:id="@+id/option1"
                android:fontFamily="@font/caviar"/>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/q5_op2"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:background="@drawable/options1"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:id="@+id/option2"
                android:fontFamily="@font/caviar"/>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/q5_op3"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:background="@drawable/options1"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="25dp"
                android:id="@+id/option3"
                android:fontFamily="@font/caviar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/score"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40"
                    android:textColor="@color/replay"
                    android:textSize="50sp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:id="@+id/value"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="bottom"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
